--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,16 @@ th {
     text-align: center;
     width: 27.5em;
 }
+.fusion-info {
+    text-align: left;
+    width: 31em;
+    padding: 3px 3px;
+    margin: 1px;
+}
+.swap-button {
+    float: right;
+    margin-top: 4px;
+}
 .holder-0 {
     position: absolute;
     top: 151px;
@@ -371,6 +381,9 @@ th {
 }
 .set-selector {
     width: 100%;
+}.fusion-selector {
+    width: 70%;
+    padding: 3px 3px;
 }
 .info-selectors select {
     width: 12em;
@@ -523,4 +536,27 @@ table.field {
 .extraSetItems,
 .extraSetMoves {
     width: 100%;
+}
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    text-align: center;
+    border: solid 1px #aaaaaa;
+    padding: 2px 2px;
+    position: relative;
+    cursor: pointer;
+    margin: -1px -3px 0;
+    display: inline-block;
+    width: 4em;
+    border-radius: 8px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #ccc;
+  }
+
+  .content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
 }
